Fixed padding for Container Fluid on Mobile devices

--- a/css/sections.css
+++ b/css/sections.css
@@ -19,6 +19,18 @@ p {
     }
 }
 
+@media screen and (max-width:600px) {
+    .container-fluid {
+        padding-left:0;
+        padding-right:0;
+    }
+    .certification-section div {
+        padding-left:20px;
+        padding-right:20px;
+    }
+
+}
+
 .navbar img {
     height:24px;
     width:24px;
